<resources>
    <string name="app_name">Overtime</string>

    <!-- Parse resources -->
    <string name="app_id" translatable="false">58dc3222c1ced7a4a8cdcc6d3027ed662245cec8</string>
    <string name="client_id" translatable="false">38e592ed7ede7e8c567bb64eb431198da9428a3f</string>
    <string name="server_address" translatable="false">http://52.47.196.160:80/parse/</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_login">Login</string>
    <string name="action_login_short">Login</string>
    <string name="error_invalid_username">This email field is empty</string>
    <string name="error_invalid_full_name">This full name is empty</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_invalid_confirm_password">Passwords not matches</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="error_login_failed">Authentication failed</string>
    <string name="title_activity_tabs">Overtime</string>
    <string name="action_settings">Settings</string>
    <string name="action_logout">Logout</string>
    <string name="action_policy">Privacy policy</string>
    <string name="section_format" translatable="false">Hello World from section: %1$d</string>
    <string name="or_login_delimiter">- or -</string>

    <!-- Strings related to text report -->
    <string name="text_rep_new_rec">Overtime:</string>
    <string name="text_rep_start_date">Start: </string>
    <string name="text_rep_end_date">Stop: </string>
    <string name="text_rep_duration">Duration: </string>
    <string name="text_rep_comment">Comments: </string>

    <!-- Strings related to RV with months chooser -->
    <string name="month_jan">January</string>
    <string name="month_feb">February</string>
    <string name="month_mar">March</string>
    <string name="month_apr">April</string>
    <string name="month_may">May</string>
    <string name="month_jun">June</string>
    <string name="month_jul">July</string>
    <string name="month_aug">August</string>
    <string name="month_sep">September</string>
    <string name="month_oct">October</string>
    <string name="month_nov">November</string>
    <string name="month_dec">December</string>

    <!-- Strings for in code use -->
    <string name="alert_leave_company_header">Exit company?</string>
    <string name="alert_fire_employee_header">Fire employee?</string>
    <string name="alert_leave_company_message">Are your sure want exit?</string>
    <string name="alert_fire_employee_message">Are you sure want fire this employee?</string>
    <string name="alert_btn_positive">YES</string>
    <string name="alert_btn_negative">Cancel</string>
    <string name="snack_bar_activation_success">Activation Success</string>
    <string name="snack_bar_activation_fail">Activation fail, probably there some trouble with connection</string>
    <string name="snack_bar_deactivation_success">Deactivation Success</string>
    <string name="snack_bar_deactivation_fail">Deactivation fail, probably there some trouble with connection</string>
    <string name="snack_bar_join_fail">Join company fail, probably there some trouble with connection</string>
    <string name="snack_bar_join_success">Join company success</string>
    <string name="snack_bar_exit_err">Exit error</string>
    <string name="snack_bar_company_reg_success">Company registered successfully!</string>
    <string name="snack_bar_fail_username_used">Failed username already in use</string>
    <string name="snack_bar_fail_email_used">Failed email already registered</string>
    <string name="snack_bar_fire_success"> successfully fired</string>
    <string name="snack_bar_fire_fail"> fire is failed</string>
    <string name="snack_bar_set_admin_fail">Grant Admin status failed!</string>
    <string name="snack_bar_set_admin_success">Grant Admin status success</string>
    <string name="snack_bar_logout_success">Logout done</string>
    <string name="snack_bar_logout_fail">Logout fail, no connection</string>
    <string name="toast_no_such_btn">No such button</string>
    <string name="toast_reg_success">Registration success</string>
    <string name="toast_reg_fail">Registration failed</string>
    <string name="toast_result_fail">Company registration failed</string>
    <string name="toast_month_not_found">Month not found</string>
    <string name="toast_view_not_found">No such view</string>
    <string name="subj_extra_all_employee_stat">Full Statistics for all employees</string>
    <string name="subj_extra_personal_stat">My overtimes</string>
    <string name="chooser_title_all_employee_stat">Share full statistics</string>
    <string name="chooser_title_personal_stat">Share personal statistics</string>
    <string name="chart_label">Hours per day</string>
    <string name="share_company_info">Share CompanyInfo</string>
    <string name="share_pin">Share company access pin</string>

    <!-- Strings for activities -->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="user_role_common">Employee</string>
    <string name="user_role_admin">Administrator</string>
    <string name="employee">Employee: </string>
    <string name="total_overtime">Total overtime: </string>
    <string name="employee_start_time">    Start time: </string>
    <string name="employee_stop_time">    Finish time: </string>
    <string name="employee_duration">    Duration: </string>
    <string name="employee_over_time_comment">    Comment for this overtime: </string>
    <string name="employee_over_time_delimiter">===================================</string>

    <string name="month_summary_overtime_label">Month summary overtime:</string>
    <string name="overtime_comment_label">Overtime comment:</string>
    <string name="til_enter_job_comment">Enter job comment</string>
    <string name="login_hint_full_name">Full name</string>
    <string name="login_hint_user_login">User login</string>
    <string name="choose_active_company_label">Choose active company or join new</string>
    <string name="join_company_using_pin_hint">Join company using pin code</string>
    <string name="btn_choose_company_join">JOIN</string>
    <string name="company_registration_label">Company registration</string>
    <string name="company_reg_name_hint">Company name</string>
    <string name="company_reg_address_hint">Company address</string>
    <string name="company_reg_phone_hint">Company phone</string>
    <string name="company_reg_email_hint">Company email</string>
    <string name="company_reg_chief_hint">Company chief</string>
    <string name="register_company_btn">Register Company</string>
    <string name="company_reg_cancel_btn">cancel</string>
    <string name="login_confirm_password_hint">Confirm password</string>
    <string name="login_register_new_company_btn">Register new company</string>
    <string name="login_confirm_btn">Confirm</string>
    <string name="login_cancel_btn">Cancel</string>
    <string name="login_register_user_or_comp_btn">Register user or company</string>
    <string name="manage_employees_label">Manage employees</string>
    <string name="manage_empl_company_label">Company:</string>
    <string name="manage_empl_employees_label">Employees:</string>
    <string name="manage_empl_fire_label">Fire</string>
    <string name="manage_empl_full_name_label">Full name</string>
    <string name="manage_empl_admin_label">Admin</string>
    <string name="tabs_timer_label">Timer</string>
    <string name="tabs_logs_label">Logs</string>
    <string name="tabs_manager_label">Manage</string>
    <string name="choose_comp_leave_company_btn_desc">Leave company</string>
    <string name="company_info_label">Company info</string>
    <string name="comp_info_address_label">Address</string>
    <string name="company_contacts_label">Contacts</string>
    <string name="comp_info_phone_label">Phone</string>
    <string name="comp_info_ceo_label">CEO</string>
    <string name="comp_info_pin_label">PIN</string>
    <string name="comp_info_copy_or_share_desc">Copy or Share</string>
    <string name="comp_info_close_btn">close</string>
    <string name="all_empl_chart_employee_info_label">Employee info:</string>
    <string name="all_empl_chart_summary_time_label">Summary time:</string>
    <string name="chart_for_company_label">For company:</string>
    <string name="show_all_employees_stat_btn">show all employees stat</string>
    <string name="timer_start_time_label">Start time:</string>
    <string name="timer_00_00_00_" translatable="false">00:00:00</string>
    <string name="timer_add_btn">Add</string>
    <string name="timer_start_overtime_btn">Start</string>
    <string name="timer_stop_overtime_btn">Finish</string>
    <string name="manage_empl_fire_employee_desc">Fire employee</string>
    <string name="nav_drawer_manage_employee">Manage employee</string>
    <string name="nav_drawer_choose_company">Choose company</string>
    <string name="nav_drawer_register_company">Register company</string>
    <string name="nav_drawer_about_active_company">About active company</string>
    <string name="overtime_chart_hint">Select overtime to see comments about this work</string>
    <string name="overtime_chart_no_selected">No overtime selected</string>
    <string name="sort_comp_label_chart_fragment">Filter: </string>
    <string name="all_companies">All companies</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="restore_toast_positive">Check your email for password recovery link</string>
    <string name="restore_toast_negative">No user with this email</string>

</resources>
