<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context=".view.ManageEmployeeActivity">
    <TextView
        android:id="@+id/tv_activity_label_manage_employees_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:textSize="24sp"
        android:textStyle="bold"
        android:layout_gravity="center_horizontal"
        android:text="@string/manage_employees_label"/>
    <TextView
        android:id="@+id/tv_label_manage_employee"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="14sp"
        android:textStyle="bold"
        android:text="@string/manage_empl_company_label"/>
    <TextView
        android:id="@+id/tv_company_manage_employee"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        android:textStyle="bold"
        tools:text="Roga i kopita"/>
    <TextView
        android:id="@+id/tv_employees_manage_employee"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="14sp"
        android:textStyle="bold"
        android:text="@string/manage_empl_employees_label"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/tv_fire_label_manage_view"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/manage_empl_fire_label"/>
        <TextView
            android:id="@+id/tv_name_label_manage_view"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="7"
            android:text="@string/manage_empl_full_name_label"/>
        <TextView
            android:id="@+id/tv_admin_label_manage_view"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/manage_empl_admin_label"/>
    </LinearLayout>
<android.support.v7.widget.RecyclerView
    android:id="@+id/rv_manage_employee"
    android:paddingBottom="20dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"/>
</LinearLayout>