<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context=".view.CompanyRegistrationActivity">

    <TextView
        android:id="@+id/tv_header_company_registration"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:textAlignment="center"
        android:textSize="24sp"
        android:textStyle="bold"
        android:text="@string/company_registration_label"/>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/til_company_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/et_company_name_registration"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/company_reg_name_hint" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/til_company_address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/et_company_address_registration"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/company_reg_address_hint" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/til_company_phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/et_company_phone_registration"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/company_reg_phone_hint" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/til_company_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/et_company_email_registration"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/company_reg_email_hint" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/til_company_chief"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/et_company_chief_registration"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/company_reg_chief_hint" />
    </android.support.design.widget.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="10">

        <Button
            android:id="@+id/btn_register_company_registration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_weight="5"
            android:text="@string/register_company_btn" />

        <Button
            android:id="@+id/btn_cancel_company_registration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_weight="5"
            android:text="@string/company_reg_cancel_btn" />
    </LinearLayout>

</LinearLayout>