<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ll_choose_comp"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:padding="20dp"
    android:orientation="vertical">
    <TextView
        android:id="@+id/tv_label_choose_comp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:layout_gravity="center"
        android:textSize="20sp"
        android:textStyle="bold"
        android:text="@string/choose_active_company_label"/>
    <LinearLayout
        android:id="@+id/ll_join_comp_choose_comp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">
        <android.support.design.widget.TextInputLayout
            android:id="@+id/til_pin_join_choose_comp"
            android:layout_width="0dp"
            android:layout_weight="7"
            android:layout_height="match_parent">
            <EditText
                android:id="@+id/et_join_pin_choose_comp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:hint="@string/join_company_using_pin_hint"/>
        </android.support.design.widget.TextInputLayout>
        <Button
            android:id="@+id/btn_join_comp_choose_comp"
            android:layout_width="0dp"
            android:layout_weight="3"
            android:layout_height="match_parent"
            android:text="@string/btn_choose_company_join"/>
    </LinearLayout>
    <android.support.v7.widget.RecyclerView
        android:id="@+id/rv_joined_companies_choose_comp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"/>
</LinearLayout>